[tool.poetry]
name = "robert"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.103.2"
uvicorn = "^0.24.0.post1"
python-dotenv = "^1.0.0"
aiogram = "^3.1.1"
sqlalchemy = "^2.0.23"
requests = "^2.31.0"
psycopg2-binary = "^2.9.9"
jinja2 = "^3.1.2"
executor = "^23.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
